<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <ImageView
        android:id="@+id/iv_logo_app"
        android:layout_width="90dp"
        android:layout_height="75dp"
        android:contentDescription="@string/logo_app"
        android:src="@drawable/ic_logo_full"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_total_fragment_list"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_margin="20dp"
        android:backgroundTint="@color/grey"
        android:gravity="center"
        android:orientation="horizontal"
        app:cardCornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo_app">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="368dp"
            android:layout_height="123dp">

            <TextView
                android:id="@+id/tv_title_fragment_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:text="@string/total_expenses_fragment_list"
                android:textColor="@color/white"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_total_expenses_fragment_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:text="@string/value"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_fragment_list" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_title_category_fragment_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:text="@string/title_category_fragment_list"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_total_fragment_list" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_category_fragment_list"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_category_fragment_list"
        tools:listitem="@layout/item_category" />

    <TextView
        android:id="@+id/tv_title_expense_fragment_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="12dp"
        android:text="@string/title_expense_fragment_list"
        android:textColor="@color/white"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_category_fragment_list" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_expense_fragment_list"
        android:layout_width="360dp"
        android:layout_height="280dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/grey"
        android:gravity="center"
        android:orientation="vertical"
        app:cardCornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_expense_fragment_list">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_expense_fragment_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:padding="10dp"
            tools:listitem="@layout/item_expense" />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_add_expense_fragment_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:backgroundTint="@color/green"
        android:text="@string/btn_add_expense"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_expense_fragment_list" />

</androidx.constraintlayout.widget.ConstraintLayout>